Revised version of Ch.5. Starting Ch.6. After this one, three shorties to go and we're done! Seeing that light at the end of the tunnel brighter than ever

--- a/0_frontmatter/acknowledgement.tex
+++ b/0_frontmatter/acknowledgement.tex
@@ -23,9 +23,9 @@
 
 %A mi abuela Geni, que aunque
 
-%Mamá, siempre dices que tener un hijo significa llevarte cien disgustos por cada orgullo. Espero que este orgullo compense todos los disgustos que te haya dado (y los que seguro te seguiré dando).  
+%A mi madre, Geles. Siempre dices que tener un hijo significa llevarte cien disgustos por cada orgullo. Espero que este orgullo compense todos los disgustos que te haya dado (y los que seguro te seguiré dando). Gracias por enseñarnos a hacer del humor no una forma de vida, pero sí de supervivencia.    
 
-%A mi padre, Alberto, que además de su nariz y su pasión por la música, me enseñó que relativizar los problemas es el primer paso para resolverlos, y la importancia que tiene disfrutar de la vida. Allí donde me esperes, sé que estás orgulloso. 
+%Y finalmente, como manda la tradición, estas últimas líneas son para el que es, y será siempre el hombre de mi vida, y de lo que haya después. A mi padre, Alberto, que además de su nariz y su pasión por la música, me enseñó que relativizar los problemas es el primer paso para resolverlos, y la importancia que tiene disfrutar de la vida. Qué largo se hace el camino sin ti, y cuánto me hubiera gustado seguir recorriéndolo de tu mano. Allí donde me estés esperando, ojalá estés orgulloso. 
 
 %Me gustaría añadir los versos de la canción de Xoel López "Lodo", porque la he escuchado durante el proceso de escritura bastante y es como un buen recordatorio de que esto es el final del camino y de que es una etapa que abre las puertas de algo nuevo y bonito
 % 
