--- a/2_stateoftheart/stateofart.tex
+++ b/2_stateoftheart/stateofart.tex
@@ -284,6 +284,4 @@ Existing design criteria for neurosymbolic systems are also briefed in this Sect
 
 These works are then framed in the context of this thesis, which considers neurosymbolic models from two standpoints: introduction and extraction. In the introductory approach, both models are integrated under a common framework, cooperating together towards the resolution of a task. On the contrary, in extraction approaches, one of the models is used to mine specific knowledge from the other. Introductory approaches are widely explored in the literature, particularly regarding the integration of rule-based systems and deep learning models. Knowledge graph completion is also one of the main focus points of these approaches. 
 
-Regarding extraction, explainable AI is the most prominent field of application. Several research has been conducted in this direction, outlining what a system requires to be considered explainable. While \textit{explainable} is the general term to describe these models, different specific terms are used to describe this eature: \textit{transparent, interpretable, understandable} or \textit{comprehensible}. 
-
-\elvitodo{No sé si es buena idea o no, de cara a la legibilidad, añadir aquí las limitaciones. Por coherencia y por separar el contenido original del propio, quizás sea mejor añadirlo como una sección al inicio del próximo capítulo}
+Regarding extraction, explainable AI is the most prominent field of application. Several research has been conducted in this direction, outlining what a system requires to be considered explainable. While \textit{explainable} is the general term to describe these models, different specific terms are used to describe this feature: \textit{transparent, interpretable, understandable} or \textit{comprehensible}. 
