--- a/3_objectives/objectives.tex
+++ b/3_objectives/objectives.tex
@@ -23,7 +23,9 @@ TBD
 
 %%RESTRICCIONES
 
-%No consideramos modelos unificados donde ambos tienen la misma importancia, sino hibridos (revisar notación para que sea coherente), de manera que existe un modelo maestro y un modelo 'slave'. No se puede usar esta terminologia ya porque es un poco reicist. Importante diferenciar cuando se hace lo de la integracion de KBS a DL que se debe introducir INTERPRETABILIDAD (ser coherente con la notación dada en el SOTA). Todas las representaciones se van a hacer siguiendo el modelo de Harmelen y Ten Teije que ademas son mis colegas.
+%No consideramos modelos unificados donde ambos tienen la misma importancia, sino hibridos (revisar notación para que sea coherente), de manera que existe un modelo maestro y un modelo 'slave'. No se puede usar esta terminologia ya porque es un poco reicist. Importante distinguir en integracion quien es el primary (EL QUE EJECUTA LA MAGRA) y el secondary (EL QUE MEJORA LA MAGRA). En el caso de la extraccion, el primario es EL QUE EXTRAE y el secondary es DEL QUE SE EXTRAE.
+ 
+%Importante diferenciar cuando se hace lo de la integracion de KBS a DL que se debe introducir INTERPRETABILIDAD (ser coherente con la notación dada en el SOTA). Todas las representaciones se van a hacer siguiendo el modelo de Harmelen y Ten Teije que ademas son mis colegas.
 
 
 %%%CONSIDERAMOS LOS METODOS DESDE CUATRO PERSPECTIVAS: LIMITACIONES, CONSIDERACIONES, CONSTRAINTS, IMPACTO.
