--- a/4_kbsintegrationdl/kbsintegrationdl.tex
+++ b/4_kbsintegrationdl/kbsintegrationdl.tex
@@ -1,7 +1,7 @@
 \chapter{Knowledge-Based System Integration into a Deep Learning Environment}\label{chap:kbsintegrationdl}
 
 %Motivaciones de esto: Incrementar capacidad de generalización, reducir número de recursos, aumento de la interpretabilidad del modelo. Restricciones de esto: 
-This chapter focuses the first of the integrations contemplated in this thesis: the introduction of knowledge-based systems in deep learning models. Section \ref{4_sec:methodology_kbs_intro_dl} outlines the specific method parameters of this integration, along with the relations between them. This design is then materialized into a hybrid proposal for KGC. KGC is one of the main fields of application of neurosymbolic approaches, as it provides a propitious scenario where both symbolic and subsymbolic approaches are suitable. This chapter presents a semantic-based initialization approach, which can be combined with any KGE model, subsequently generating a hybrid approach. Section \ref{4_sec:ontointro_kgc} outlines the motivation and overview of the proposed initialization, presented Section \ref{4_sec:semantic_initialization}. Section \ref{4_sec:experiments} presents the different experiments conducted to validate the proposal, as well as the achieved results, which are discussed in Section \ref{4_sec:results}. Section \ref{4_sec:method_assessment} frames the presented use case in the context of the general design method, providing insights on the specific methodological parameters featured in the integration. Section \ref{4_sec:summary} summarizes the content of the chapter. \blfootnote{The content of this chapter is based on the work: Amador-Domínguez, E., Serrano, E., Manrique, D., Hohenecker, P., \& Lukasiewicz, T. (2021). An ontology-based deep learning approach for triple classification with out-of-knowledge-base entities. Information Sciences, 564, 85–102. doi:10.1016/j.ins.2021.02.018}
+This chapter focuses the first of the integrations contemplated in this thesis: the insertion of knowledge-based systems in deep learning models. Section \ref{4_sec:methodology_kbs_intro_dl} outlines the specific method parameters of this integration, along with the relations between them. This design is then materialized into a hybrid proposal for KGC. KGC is one of the main fields of application of neurosymbolic approaches, as it provides a propitious scenario where both symbolic and subsymbolic approaches are suitable. This chapter presents a semantic-based initialization approach, which can be combined with any KGE model, subsequently generating a hybrid approach. Section \ref{4_sec:ontointro_kgc} outlines the motivation and overview of the proposed initialization, presented Section \ref{4_sec:semantic_initialization}. Section \ref{4_sec:experiments} presents the different experiments conducted to validate the proposal, as well as the achieved results, which are discussed in Section \ref{4_sec:results}. Section \ref{4_sec:method_assessment} frames the presented use case in the context of the general design method, providing insights on the specific parameter values. Section \ref{4_sec:summary} summarizes the content of the chapter. \blfootnote{The content of this chapter is based on the work: Amador-Domínguez, E., Serrano, E., Manrique, D., Hohenecker, P., \& Lukasiewicz, T. (2021). An ontology-based deep learning approach for triple classification with out-of-knowledge-base entities. Information Sciences, 564, 85–102. doi:10.1016/j.ins.2021.02.018}
 
 \begin{figure}[ht]
     \centering
@@ -82,7 +82,6 @@ KGE models assign a singular representation for each entity and relation which e
 Figure \ref{fig:kgc_onto_example} outlines the general idea of the proposal. Every entity contains its own ontological information. In this example, the class hierarchy of each entity is used as ontological information. While facts about a given entity $e$ are volatile and subject to change, its class hierarchy remains reasonably static throughout time. Moreover, class hierarchies are similar or even equal in those entities representing closely related concepts. \textit{Barack Obama} ($e_1$) and \textit{Donald Trump} ($e_2$) class hierarchies are equal, implying that they represent the same type of concept. For the entity \textit{Michelle Obama}, its class hierarchy is a subset of the class hierarchy of the aforementioned entities. Therefore, even though this entity does not represent a \textit{President}, it still holds a high resemblance with both $e_1$ and $e_2$. Considering the equality of the class hierarchies of entities $e_1$ and $e_2$, even though $e_2$ was not featured in the training set, analogical inference can be performed. The combination of the ontological background of the entity with its specific information makes it possible to leverage information about similar entities, leading the model to infer restrictions capable of enabling reasoning over OOKB entities. In the example depicted in Figure \ref{fig:kgc_onto_example}, even though the only known information about the entity \textit{Donald Trump} is its class hierarchy, it can be assessed whether the potential fact \textit{(DonaldTrump, nationality, UnitedStates)} holds based on its resemblance with the known fact \textit{(BarackObama, nationality, UnitedStates)}. 
 
 %%%INICIO BLOQUE PAPER
-\color{purple}
 
 \section{Semantic-Based Initialization for Out-Of-Knowledge-Base Entity Reasoning}
 
@@ -449,8 +448,6 @@ In addition to improving the transferability, OOKB reasoning via semantic-based 
     
     \item \textit{$TCAP_{FK} \ll TCAP_{OOKB}$:} A non-optimal parameter selection can result in an imbalance in favour of the OOKB set. Insufficient learning of specific entity knowledge can result in this result mismatch, indicating that the model has not converged to its optimal solution, but diverged.
 \end{itemize}
-
-\color{black}
 
 \section{Design Compliance}\label{4_sec:method_assessment}
 \begin{figure}[ht]
