--- a/5_dlintegrationkbs/dlintegrationkbs.tex
+++ b/5_dlintegrationkbs/dlintegrationkbs.tex
@@ -1,7 +1,7 @@
-\chapter{Deep Learning Introduction in Knowledge-Based Systems}
+\chapter{Deep Learning Introduction into Knowledge-Based Systems}
 \label{chap:dlintegrationkbs} 
 
-This chapter presents the second introductory integration between deep learning models and knowledge-based systems. Section \ref{5_sec:dl_intro_kbs_methodology} presents the method parameters for the insertion of deep learning models in a knowledge-based system. This insertion method is instantiated into a hybrid framework, combining a case-based reasoning (CBR) model with different deep learning modules. Section \ref{5_sec:dl_powered_kbs_medical} outlines the main features of the proposed framework, focusing on its application in the medical domain. In this context, a CBR powered by DL modules for the generation of medical reports is presented. This scenario showcases the benefits of the introduction of DL into a CBR model, such as enabling reasoning over complex data (i.e., textual reports and images) or enhanced scalability. Section \ref{5_sec:raidologist} instantiates the proposed framework in its use for radiological report generation. Section \ref{5_sec:experimental_results} presents the experimental results. The compliance of the case scenario with respect to the general design method is outlined in Section \ref{5_sec:design_compliance}. The chapter is summarized in Section \ref{5_sec:summary}. \blfootnote{Amador-Domínguez, E., Serrano, E., Manrique, D., & Bajo, J. (2021). A Case-Based Reasoning Model Powered by Deep Learning for Radiology Report Recommendation. Int. J. Interact. Multim. Artif. Intell., 7(2), 15. doi:10.9781/ijimai.2021.08.011}
+This chapter \blfootnote{Amador-Domínguez, E., Serrano, E., Manrique, D., & Bajo, J. (2021). A Case-Based Reasoning Model Powered by Deep Learning for Radiology Report Recommendation. Int. J. Interact. Multim. Artif. Intell., 7(2), 15. doi:10.9781/ijimai.2021.08.011}presents the second insertion integration between deep learning models and knowledge-based systems. Section \ref{5_sec:dl_intro_kbs_methodology} presents the method parameters for the insertion of deep learning models in a knowledge-based system. This insertion method is instantiated into a hybrid framework, combining a case-based reasoning (CBR) model with different deep learning modules. Section \ref{5_sec:dl_powered_kbs_medical} outlines the main features of the proposed framework, focusing on its application in the medical domain. In this context, a CBR powered by DL modules for the generation of medical reports is presented. This scenario showcases the benefits of the introduction of DL into a CBR model, such as enabling reasoning over complex data (i.e., textual reports and images) or enhanced scalability. Section \ref{5_sec:raidologist} instantiates the proposed framework in its use for radiological report generation. Section \ref{5_sec:experimental_results} presents the experimental results. The compliance of the case scenario regarding the general design method is outlined in Section \ref{5_sec:design_compliance}. The chapter is summarized in Section \ref{5_sec:summary}. 
 
 
 \section{Deep Learning Insertion in Knowledge-Based Systems}\label{5_sec:dl_intro_kbs_methodology}
@@ -11,13 +11,13 @@ This chapter presents the second introductory integration between deep learning 
     \caption{Overview on the Insertion of Deep Learning into a Knowledge-Based System.}
     \label{fig:overview_dl_kbs_intro}
 \end{figure}
-In the second integration path, the KBS is the primary model, while DL serves as a supporting element. Figure \ref{fig:overview_dl_kbs_intro} outlines the design parameters for the introduction of DL into KBS.
+In the second integration approach, the KBS is the primary model, while DL serves as a supporting element. Figure \ref{fig:overview_dl_kbs_intro} outlines the design parameters for the introduction of DL into KBS.
 \subsection{Limitations}
 \begin{enumerate} [start=1,label={\bfseries L\arabic*.}]
-    \item \textbf{Reliance on human interaction.} \label{dl_intro_kbs_L_human} While some KBS behave autonomously, the majority of them have expert knowledge as their cornerstone.  Expert knowledge can not be automatically mined, as it comes directly from human users. Moreover, the implication of human users within the KBS may not be only limited to their deployment, but can also be required for validation, extension and maintenance. 
+    \item \textbf{Reliance on human interaction.} \label{dl_intro_kbs_L_human} While some KBS behave autonomously, the majority of them have expert knowledge as their cornerstone.  Expert knowledge can not be automatically elicited, as it comes directly from human users. Moreover, the implication of human users within the KBS may not be only limited to their deployment, but can also be required for validation, extension, and maintenance. 
     \item \textbf{Brittleness.}\label{dl_into_kbs_L_brittle} In DL models, brittleness was a result of the nonexistence of restrictions. In the case of KBS, prediction instability is induced by the use of discrete formalization. These hardcoded generalizations about data hinder the capture of exceptions, making the system volatile to the presence of noise and data changes.  
-    \item \textbf{Limited abstraction capacity.}\label{dl_into_kbs_L_abstraction} Most KBS models rely on formal representations to reason over input data. These representations can have a probabilistic background (i.e. fuzzy logic) that enables some degree of uncertainty on the predictions of a given input. However, even probabilistic KBS models experience difficulties when processing inputs that do not fall within the specified representations. Moreover, the number of formalizations required to cover over all the elements in the KB are subject to combinatorial explosions, limiting its reasoning capability.
-    \item \textbf{Low scalability.}\label{dl_into_kbs_L_scalability} KBS, specially rule-based models, grow proportionally to the size of the KB. Additionally, generating knowledge bases for KBS is an expensive and tedious process. There are approaches to automatically mine KBs from unstructured data, but they still require expert supervision to ensure the correctness of the mined information. Subsequently, the scalability of KBS is remarkably limited.  
+    \item \textbf{Limited abstraction capacity.}\label{dl_into_kbs_L_abstraction} Most KBS models rely on formal representations to reason over input data. Some of these representations have a probabilistic background (e.g. Bayesian Networks) that enables some degree of uncertainty on the predictions of a given input. However, even probabilistic KBS models experience difficulties when processing inputs that do not fall within the specified representations. Moreover, the number of formalizations required to cover over all the elements in the KB are subject to combinatorial explosions, limiting its reasoning capability.
+    \item \textbf{Low scalability.}\label{dl_into_kbs_L_scalability} KBS, specially rule-based models, grow proportionally to the size of the KB. Additionally, generating knowledge bases for KBS is an expensive and tedious process. There are approaches to automatically extract KBs from unstructured data, but they still require expert supervision to ensure the correctness of the mined information. Subsequently, the scalability of KBS is remarkably limited.  
 \end{enumerate}
 
 \subsection{Considerations}
@@ -26,30 +26,30 @@ In the second integration path, the KBS is the primary model, while DL serves as
     
     \item \textbf{Data availability}\label{dlintrokbs_C_data} KBS do not require an elevated amount of data. DL models, however are data hungry (as outlined in \ref{kbsintrodl_L_data_hungry} of KBS introduction into DL). Before integrating DL within a KBS model, it must be ensured that enough data for DL model training is available. 
     
-    \item \textbf{Resource availability}\label{dlintrokbs_C_resource} Opposite to DL models, KBS do not require powerful computational resources to run. Instead, KBS models need storage resources to store the KBs and, in some approaches, the reasoning representations. The integration of KBS and DL in this context poses two challenges, as both storage and computational resources need to be assured for both elements to function.
+    \item \textbf{Resource availability}\label{dlintrokbs_C_resource} Opposite to DL models, KBS do not require powerful computational resources to run. Instead, KBS models need to store the KBs and, in some approaches, the reasoning representations. The integration of KBS and DL in this context poses two challenges, as both storage and computational resources need to be assured for both elements to function.
 \end{enumerate}
 \subsection{Restrictions}
 \begin{enumerate} [start=1,label={\bfseries R\arabic*.}]
     \item \textbf{Performance must increase.} \label{dlinstrokbs_R_performance} The inclusion of DL in a KBS carries an computational cost. Therefore, the resulting hybrid approach is expected to show a performance improvement with respect to the baseline KBS for the integration to be cost-effective. 
     
-    \item \textbf{User input affects the behaviour of the model.}\label{dlintrokbs_R_user} Expert-knowledge and user input is indispensable for KBS models (\ref{dl_intro_kbs_L_human}). While it can be perceived as limiting, it ensures the correct behaviour of the KBS. The impact that external input has on the behaviour of the system should remain with the introduction of DL, correcting not only the behaviour of the KBS, but also of the DL.
+    \item \textbf{User input affects the behaviour of the model.}\label{dlintrokbs_R_user} User input is indispensable for KBS models (\ref{dl_intro_kbs_L_human}). While it can be perceived as limiting, it ensures the correct behaviour of the KBS. The impact that external input has on the behaviour of the system should remain with the introduction of DL, correcting not only the behaviour of the KBS but also of the DL.
     
-    \item \textbf{Interpretability does not decrease.}\label{dlintrokbs_LR_interpretability} One of the main assets of KBS is their high interpretability. KBS are designed to both integrate external input and produce outputs whose inference process can be equally understood by humans. DL models, on the contrary, behave as black-boxes. Therefore, their integration should be performed in a way that does not obscure the inference process, so that it can still be understandable by humans.
+    \item \textbf{Interpretability does not decrease.}\label{dlintrokbs_LR_interpretability} One of the main assets of KBS is their high interpretability. KBS are designed to both integrate external input and produce outputs whose inference process can be understood by humans. DL models, on the contrary, behave as black-boxes. Therefore, their integration should be performed in a way that does not obscure the inference process, so that it can still be understandable.
     
 \end{enumerate}
 \subsection{Benefits}
 \begin{enumerate} [start=1,label={\bfseries B\arabic*.}]
     \item \textbf{Automatization.}\label{dlintrokbs_B_automatization} As outlined in \ref{dl_intro_kbs_L_human}, human interaction (specially expert knowledge) is essential for generating and maintaining KBS. DL models, on the contrary, have a mostly autonomous behaviour. Therefore, the introduction of DL in KBS may serve to automatize some of the steps required to deploy, maintain and validate KBS, reducing the need of human intervention.
     
-    \item \textbf{Improved scalability.}\label{dlintrokbs_B_scalability} KBS are limited in terms of scalability due to their reliance on human intervention (\ref{dl_into_kbs_L_scalability}). The inclusion of DL modules within the KBS, as well as automatizing some tasks, can improve the scalability of the system. For example, mining formal representations from a set of unstructured data.
+    \item \textbf{Improved scalability.}\label{dlintrokbs_B_scalability} KBS are limited in terms of scalability due to their reliance on human intervention (\ref{dl_into_kbs_L_scalability}). The inclusion of DL modules within the KBS, as well as automatizing some tasks, can improve the scalability of the system. For example, extracting formal representations from a set of unstructured data.
     
-    \item \textbf{Enhanced inference capacity.}\label{dlintrokbs_B_inference} KBS models struggle with capturing non explicit exceptions from data (\ref{dl_into_kbs_L_brittle}. DL models infer abstract patterns about data, capable of assigning an output for any input, even for outliers. Moreover, DL models only require samples of previously unseen inputs to infer new feasible patterns for their correct classification (\ref{dl_into_kbs_L_abstraction}). The introduction of DL modules into a KBS could not only enhance its abstraction capacity, but improving the reasoning of the model on outlier elements.
+    \item \textbf{Enhanced inference capacity.}\label{dlintrokbs_B_inference} KBS models struggle with capturing non explicit exceptions from data (\ref{dl_into_kbs_L_brittle}. DL models infer abstract patterns from data, capable of assigning an output for any input, even for outliers. Moreover, DL models only require samples of previously unseen inputs to infer new feasible patterns for their correct classification (\ref{dl_into_kbs_L_abstraction}). The introduction of DL modules into a KBS could not only enhance its abstraction capacity, but improving the reasoning of the model on outlier elements.
 
 \end{enumerate}
 
 
 \section{Deep Learning Powered Case-Based Reasoning for Medical Document Processing}\label{5_sec:dl_powered_kbs_medical}
-Case-Based Reasoning (CBR) integration with DL is one of the introductory scenarios depicted in Section \ref{sec:sota_dl_kb_intregration}. As denoted, CBR is often posed as an alternative to rule-based systems, which is the main symbolic paradigm of hybrid systems. This Section presents a use case where DL modules are injected into a CBR model, focusing on the medical domain. One of the most interesting conclusions of the systematic review in \cite{amador_systematic_review_2019} is the predominance of interpretable, knowledge-based systems in the medical domain. Explainability was rated as one of the key features of these models, thus showing its relevance for its application to this domain. Therefore, the CBR acts as the primary model in this scenario, ensuring that the final hybrid approach remains interpretable. 
+Case-Based Reasoning (CBR) integration with DL is one of the scenarios depicted in Section \ref{sec:sota_dl_kb_intregration}. As denoted, CBR is often posed as an alternative to rule-based systems. This Section presents a use case on the medical domain, where DL modules are injected into a CBR model. One of the most interesting conclusions of the systematic review in \cite{amador_systematic_review_2019} is the predominance of interpretable, knowledge-based systems in the medical domain. Explainability was rated as one of the key features of these models, thus showing its relevance for its application to this domain. Therefore, the CBR acts as the primary model in this scenario, ensuring that the final hybrid DL-powered approach remains interpretable. 
 
 \begin{figure}[t]
     \centering
@@ -58,9 +58,9 @@ Case-Based Reasoning (CBR) integration with DL is one of the introductory scenar
     \label{fig:overview_CBR_DL}
 \end{figure}
 
-Figure \ref{fig:overview_CBR_DL} depicts a general overview of the proposed hybrid model. Dashed line denotes the elements where DL can be introduced so that the integrity and interpretability of the CBR model is not compromised, but a performance enhancement is induced. The proposed framework is devised for the medical domain to provide assistance in the generation of medical reports, as presented in \cite{DBLP:journals/ijimai/Amador-Dominguez21}. The framework is not devised to replace the behaviour of the expert, but to provide formal corrections, references, and suggestions to improve the final quality of the results. 
+Figure \ref{fig:overview_CBR_DL} depicts a general overview of the proposed hybrid model. Dashed line denotes the elements where DL can be introduced so that the integrity and interpretability of the CBR model is not compromised, but a performance enhancement is induced. The proposed framework provides assistance in the generation of medical reports, as presented in \cite{DBLP:journals/ijimai/Amador-Dominguez21}. It is not devised to replace the behaviour of the expert, but to provide formal corrections, references, and suggestions to improve the final quality of the results. 
 
-CBR behaves as a cyclical model, comprising four stages: retrieve, reuse, revise, and retain. These stages are differentiated in Figure \ref{fig:overview_CBR_DL}, showing the interactions between phases, as well as between the framework and the user. 
+CBR behaves cyclically, comprising four stages: retrieve, reuse, revise, and retain. These stages are differentiated in Figure \ref{fig:overview_CBR_DL}, showing the interactions between phases, as well as between the framework and the user. 
 
 \color{purple}
 
@@ -260,13 +260,13 @@ A Case-based reasoning model comprising several boosting DL modules instantiates
 \begin{figure}[t]
     \centering
     \includegraphics[width=\linewidth]{5_dlintegrationkbs/figures/Instance_DL_intro_KBS.eps}
-    \caption{Overview of the design parameters of the introduction of DL models in a CBR framework. In bold, the general design parameters as depicted in \ref{fig:overview_dl_kbs_intro}.}
+    \caption{Overview of the design parameters of the introduction of DL models into a CBR framework. In bold, the general design parameters as depicted in \ref{fig:overview_dl_kbs_intro}.}
     \label{fig:compliance_dl_into_kbs}
 \end{figure}
 
 \subsection{Limitations}
 \begin{itemize}
-    \item \textbf{Expert knowledge requirement.} CBR models are highly reliant on expert input. This is particularly remarkable in the revise stage, where a panel of experts needs to manually revise the pending cases to make their inclusion in the case base effective (\ref{dl_intro_kbs_L_human}). In CBR, the system improves with the inclusion of new cases within the system. Subsequently, if no expert knowledge is available to validate the cases, the performance of the model will remain static. 
+    \item \textbf{Expert knowledge requirement.} CBR models are highly reliant on expert input. This is particularly remarkable in the revise stage, where a panel of experts needs to manually revise the pending cases to make their inclusion in the case base effective (\ref{dl_intro_kbs_L_human}). In CBR, the system improves with the inclusion of new cases within the system. Subsequently, if no expert knowledge is available to validate the cases, the model performance remains static. 
     
     \item \textbf{Human-triggered.} In a pure CBR model, several stages are only triggered by human intervention (\ref{dl_intro_kbs_L_human}). Except in the retrieval phase, where the user can be actively involved, its influence can extend to different phases, such as revise and retain. Subsequently, the learning process may be hampered if no human intervention is available (\ref{dl_into_kbs_L_scalability}).
     
@@ -278,9 +278,9 @@ A Case-based reasoning model comprising several boosting DL modules instantiates
 \end{itemize}
 \subsection{Considerations}
 \begin{itemize}
-    \item \textbf{Expert availability.} In the health domain where the proposed implementation is deployed, expert knowledge is crucial for the correct behaviour of the system. Users are not required to be experts to use the system, and therefore this cornerstone knowledge must be integrated within the system so that the output is still valid. Expert knowledge must be available, at least in the initial timeline of the system, to ensure the validity of the output responses and the correct behaviour of the system (\ref{dlintrokbs_C_expert}).
+    \item \textbf{Expert availability.} In the health domain where the proposed implementation is deployed, expert knowledge is crucial for the correct behaviour of the system. Users are not required to be experts to use the system, and therefore expert knowledge must be integrated within the system so that the output is still valid. Expert knowledge must be available, at least in the initial timeline of the system, to ensure the validity of the output responses and the correct behaviour of the system (\ref{dlintrokbs_C_expert}).
     
-    \item \textbf{External data availability.} As studied in the previous section, DL models are data hungry, thus requiring large datasets to achieve a good performance. In the initial stages of the CBR, where the case base is not reasonably populated, the amount of available data may not be sufficient to train robust DL models. Therefore, external data may be required to train the first iterations of the DL model until the number of cases available is enough to replace it (\ref{dlintrokbs_C_data}).
+    \item \textbf{External data availability.} DL models are data hungry, thus requiring large datasets to achieve a good performance. In the initial stages of the CBR, where the case base is not reasonably populated, the amount of available data may not be sufficient to train robust DL models. Therefore, external data may be required to train the DL model until the number of cases available is enough to replace it (\ref{dlintrokbs_C_data}).
     
     \item \textbf{Sufficient computational resources.} CBR models do not entail elevated computational power, but require sufficient storage. On the contrary, DL models may demand a higher computational power to be able to operate. Therefore, it must be ascertained that both the storage and computational resources are sufficient (\ref{dlintrokbs_C_resource}).
     
@@ -289,7 +289,7 @@ A Case-based reasoning model comprising several boosting DL modules instantiates
 \begin{itemize}
     \item \textbf{Case-based reasoning model performance improves.} The introduction of DL models carries a computational cost. This increment in cost must be reflected in a noticeable improvement in the performance of the model to maintain a balance between benefit and cost. The proposed framework satisfices this constraint, as the inclusion of DL models induces the generation of case solutions that cannot be inferred otherwise (\ref{dlinstrokbs_R_performance}).
     
-    \item \textbf{User input is integrated within the learning cycle.} CBR models are user-oriented, and therefore the validity of a given solution is not objective, but subjective to the user requirements and expectations. Subsequently, user input must play an important role in the generation of the case solution, and should be considered by the different modules to adjust their outputs accordingly. In the proposed framework, user input not only guides the retrieval process, but its also required to correct and validate the initial proposed solution (\ref{dlintrokbs_R_user}). 
+    \item \textbf{User input is integrated within the learning cycle.} CBR models are user-oriented, and therefore the validity of a given solution is not objective, but subjective to the user requirements and expectations. Subsequently, user input must play an important role in the generation of the case solution, and should be considered by the different modules to adjust their outputs accordingly. In the proposed framework, user input not only guides the retrieval process, but it is also required to correct and validate the initially proposed solution (\ref{dlintrokbs_R_user}). 
     
     \item \textbf{Inference process remains understandable.} One of the key advantages of symbolic models with respect to their subsymbolic counterparts are their transparency and interpretability. This property should be therefore preserved. In the proposed implementation, DL models are included seamlessly in the CBR cycle. Therefore, while some minor elements of the retrieve and reuse phases may be opaque, the output of each phase as a whole can be fully understood from the input (\ref{dlintrokbs_LR_interpretability}).
 \end{itemize}
@@ -299,7 +299,7 @@ A Case-based reasoning model comprising several boosting DL modules instantiates
     
     \item \textbf{Enhanced scalability.} Replacing rule-based systems with DL models not only reduces the need for human intervention, but improves the scalability of the system. While rules require human intervention for validation and maintenance, thus creating potential bottlenecks, DL models operate autonomously. Therefore, reuse modules are easily and automatically kept updated with the data contained in the case base (\ref{dlintrokbs_B_scalability}).
     
-    \item \textbf{Boosted inference capacity.} CBR should produce a tailored solution for a given input, which are generally obtained via rule instantiation. The solutions inferred by rules are highly limited, as they rely on generalizations about the data, thus not capturing the particularities of each case. Moreover, they may be insufficient to deal with complex inputs where the attributes are not strictly quantitative. The inclusion of DL models not only enables the generation of solutions that could not be inferred with rules, but also enables the comparison of complex inputs, such as textual reports (\ref{dlintrokbs_B_inference}).
+    \item \textbf{Boosted inference capacity.} CBR should produce a tailored solution for a given input, which is generally obtained via rule instantiation. The solutions inferred by the rules are highly limited, as they rely on generalizations about the data, thus not capturing the particularities of each case. Moreover, they may be insufficient to deal with complex inputs where the attributes are not strictly quantitative. The inclusion of DL models not only enables the generation of solutions that could not be inferred from rules, but also enables the comparison of complex inputs, such as textual reports (\ref{dlintrokbs_B_inference}).
 \end{itemize}
 
 \section{Summary}\label{5_sec:summary}
