--- a/Thesis.tex
+++ b/Thesis.tex
@@ -540,7 +540,8 @@ EL PRESIDENTE \hspace{30mm} VOCAL 1 \hspace{30mm} VOCAL 2
 
 % Tie in external source file for definitions: /0_frontmatter/glossary.tex
 % Glossary entries can also be defined in the main text. See glossary.tex
-
+\cleardoublepage
+\input{0_frontmatter/glossary.tex}
 %\input{0_frontmatter/glossary} 
 %
 %\begin{multicols}{2} % \begin{multicols}{#columns}[header text][space]
@@ -591,7 +592,7 @@ EL PRESIDENTE \hspace{30mm} VOCAL 1 \hspace{30mm} VOCAL 2
 
 \input{5_dlintegrationkbs/dlintegrationkbs}
 
-%\input{6_kbsextractiondl/kbsextractiondl}
+\input{6_kbsextractiondl/kbsextractiondl}
 
 % \input{7_kgconstruction/construction}
 
