--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -3962,6 +3962,25 @@ keywords = "Knowledge representation, Multi-source, Textual information",
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+
+@article{DBLP:journals/eswa/Amador-Dominguez21,
+  author    = {Elvira Amador{-}Dom{\'{\i}}nguez and
+               Emilio Serrano and
+               Daniel Manrique},
+  title     = {A hierarchical multi-agent architecture based on virtual identities
+               to explain black-box personalization policies},
+  journal   = {Expert Syst. Appl.},
+  volume    = {186},
+  pages     = {115731},
+  year      = {2021},
+  url       = {https://doi.org/10.1016/j.eswa.2021.115731},
+  doi       = {10.1016/j.eswa.2021.115731},
+  timestamp = {Wed, 03 Nov 2021 08:24:48 +0100},
+  biburl    = {https://dblp.org/rec/journals/eswa/Amador-Dominguez21.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
 @misc{ying_2019_gnnexplainer,
       title={GNNExplainer: Generating Explanations for Graph Neural Networks}, 
       author={Rex Ying and Dylan Bourgeois and Jiaxuan You and Marinka Zitnik and Jure Leskovec},
