--- a/0_frontmatter/glossary.tex
+++ b/0_frontmatter/glossary.tex
@@ -1,27 +1,31 @@
 % this file is called up by thesis.tex
 % content in this file will be fed into the main document
 
-% Glossary entries are defined with the command \nomenclature{1}{2}
+% Glossary entries are defined with the command \item{1}{2}
 % 1 = Entry name, e.g. abbreviation; 2 = Explanation
 % You can place all explanations in this separate file or declare them in the middle of the text. Either way they will be collected in the glossary.
 
 % required to print nomenclature name to page header
-\markboth{\MakeUppercase{\nomname}}{\MakeUppercase{\nomname}}
+\chapter{Acronyms}
+% \markboth{\MakeUppercase{\nomname}}{\MakeUppercase{\nomname}}
+\begin{description}
+\item[CBR]{Case-Based Reasoning}
+\item[DL]{Deep Learning}
+\item[GPU]{Graphical Processing Unit}
+\item[KBS]{Knowledge-Based System(s)}
+\item[KGC]{Knowledge Graph Completion}
+\item[KGE]{Knowledge Graph Embedding(s)}
+\item[NER]{Named Entity Recognition}
+\item[NLP]{Natural Language Processing}
 
-\nomenclature[CBR]{CBR}{Case-Based Reasoning}
-\nomenclature[DL]{DL}{Deep Learning}
-\nomenclature[KGC]{KGC}{Knowledge Graph Completion}
-\nomenclature[KGE]{KGE}{Knowledge Graph Embedding(s)}
-\nomenclature[KBS]{KBS}{Knowledge-Based System(s)}
-\nomenclature[NER]{NER}{Named Entity Recognition}
-\nomenclature[NLP]{NLP}{Natural Language Processing}
+\end{description}
 % ----------------------- contents from here ------------------------
 
 % chemicals
-\nomenclature{DAPI}{4',6-diamidino-2-phenylindole; a fluorescent stain that binds strongly to DNA and serves to marks the nucleus in fluorescence microscopy} 
-%\nomenclature{DEPC}{diethyl-pyro-carbonate; used to remove RNA-degrading enzymes (RNAases) from water and laboratory utensils}
-%\nomenclature{DMSO}{dimethyl sulfoxide; organic solvent, readily passes through skin, cryoprotectant in cell culture}
-%\nomenclature{EDTA}{Ethylene-diamine-tetraacetic acid; a chelating (two-pronged) molecule used to sequester most divalent (or trivalent) metal ions, such as calcium (Ca$^{2+}$) and magnesium (Mg$^{2+}$), copper (Cu$^{2+}$), or iron (Fe$^{2+}$ / Fe$^{3+}$)}
+% \item{DAPI}{4',6-diamidino-2-phenylindole; a fluorescent stain that binds strongly to DNA and serves to marks the nucleus in fluorescence microscopy} 
+%\item{DEPC}{diethyl-pyro-carbonate; used to remove RNA-degrading enzymes (RNAases) from water and laboratory utensils}
+%\item{DMSO}{dimethyl sulfoxide; organic solvent, readily passes through skin, cryoprotectant in cell culture}
+%\item{EDTA}{Ethylene-diamine-tetraacetic acid; a chelating (two-pronged) molecule used to sequester most divalent (or trivalent) metal ions, such as calcium (Ca$^{2+}$) and magnesium (Mg$^{2+}$), copper (Cu$^{2+}$), or iron (Fe$^{2+}$ / Fe$^{3+}$)}
 
 
 
